Java 8 Branch because there are people who like 7 year old java versions... https://howoldisjava8.today/